--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
-
+    android:background="#FFFFFF"
+    tools:context=".RegistrarseActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,6 +57,8 @@
             android:background="@drawable/inicio_sesion"
             android:hint="@string/edt_ingrnom"
             android:inputType="textPersonName"
+            android:textColor="#000000"
+            android:textColorHint="#8E8B93"
             android:padding="12dp" />
 
         <TextView
@@ -75,6 +78,8 @@
             android:background="@drawable/inicio_sesion"
             android:hint="@string/edt_ingreemail"
             android:inputType="textEmailAddress"
+            android:textColor="#000000"
+            android:textColorHint="#8E8B93"
             android:padding="12dp" />
 
         <TextView
@@ -94,6 +99,8 @@
             android:background="@drawable/inicio_sesion"
             android:hint="@string/edt_ingreContra"
             android:inputType="textPassword"
+            android:textColor="#000000"
+            android:textColorHint="#8E8B93"
             android:padding="12dp" />
 
         <Button
