--- a/app/src/main/res/layout/activity_validar.xml
+++ b/app/src/main/res/layout/activity_validar.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    tools:context=".ValidarActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,6 +58,8 @@
             android:layout_height="56dp"
             android:layout_marginTop="20dp"
             android:paddingStart="20dp"
+            android:textColor="#000000"
+            android:textColorHint="#8E8B93"
             android:hint="Introduce tu número de teléfono"
             android:inputType="phone"
             android:background="@drawable/inicio_sesion"/>
@@ -75,6 +80,8 @@
             android:layout_height="56dp"
             android:layout_marginTop="10dp"
             android:paddingStart="20dp"
+            android:textColor="#000000"
+            android:textColorHint="#8E8B93"
             android:hint="Código de verificación"
             android:inputType="number"
             android:background="@drawable/inicio_sesion"/>
@@ -90,18 +97,6 @@
             android:textColor="#FFFFFF"/>
 
         <!-- (Opcional) Botón reenviar código -->
-
-        <LinearLayout
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp"
-            android:layout_width="212dp"
-            android:layout_height="203dp"
-            android:background="@drawable/img"
-            android:orientation="vertical"
-            android:src="@drawable/img"
-
-            />
-
         <TextView
             android:id="@+id/txtReenviarCodigo"
             android:layout_width="match_parent"
@@ -113,5 +108,4 @@
 
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
